--- a/index.html
+++ b/index.html
@@ -1,322 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DigitalConfVisions - Projecting Lens/Gate</title>
-    <style>
-        /* CSS Variables for easy theme management */
-        :root {
-            --bg-color: #0A0A10;
-            --lens-dark: #1E1E2F;
-            --lens-medium: #3A3A4A;
-            --lens-light: #5C5C6F;
-            --glow-blue: #00F0FF;
-            --glow-cyan: #00BFFF;
-            --glow-purple: #8A2BE2; /* Part of the suggested palette, can be integrated */
-            --text-color: #E0E0E0;
-            --accent-silver: #C0C0C0;
-            --hamburger-color: white;
-        }
+<div class="min-h-screen bg-gray-950 text-gray-100 flex flex-col items-center justify-center p-4">
 
-        /* Basic Body and Centering */
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; /* System fonts for self-containment */
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            overflow: hidden; /* Prevent scrollbar from pseudo-elements/animations */
-            perspective: 1000px; /* Establishes a 3D context for child elements */
-            position: relative; /* For fixed elements like hamburger */
-        }
-
-        /* Main content container */
-        .container {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            max-width: 90vw;
-            width: 100%;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-
-        /* --- Concept 3: The Projecting Lens/Gate Styling --- */
-        .lens-gate {
-            position: relative;
-            width: 300px; /* Base size of the lens component */
-            height: 300px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 50px;
-            transform-style: preserve-3d; /* Children will exist in 3D space */
-            animation: rotateLens 15s linear infinite; /* Subtle continuous rotation for dynamic feel */
-        }
-
-        .lens-ring {
-            position: absolute;
-            border-radius: 50%;
-            box-sizing: border-box;
-            background: radial-gradient(circle at 50% 50%, rgba(255,255,255,0.05) 0%, rgba(0,0,0,0) 70%); /* Subtle inner light/reflection */
-            box-shadow: 0 0 15px rgba(0,240,255,0.3), inset 0 0 10px rgba(0,240,255,0.1); /* Outer and inner glow */
-            border: 2px solid;
-            transform-style: preserve-3d; /* Allows further 3D transforms on children if any */
-        }
-
-        /* Layered rings with depth via translateZ to simulate extrusion */
-        .lens-ring:nth-child(1) {
-            width: 300px; height: 300px;
-            border-color: var(--lens-light);
-            transform: translateZ(20px); /* Foremost ring */
-            opacity: 0.9;
-        }
-        .lens-ring:nth-child(2) {
-            width: 260px; height: 260px;
-            border-color: var(--lens-medium);
-            transform: translateZ(10px);
-            opacity: 0.95;
-        }
-        .lens-ring:nth-child(3) {
-            width: 220px; height: 220px;
-            border-color: var(--lens-dark);
-            transform: translateZ(0px); /* Mid-layer */
-            opacity: 1;
-        }
-        .lens-ring:nth-child(4) { /* Innermost ring / aperture, source of light */
-            width: 180px; height: 180px;
-            border-color: var(--glow-blue);
-            background: radial-gradient(circle at center, rgba(0,240,255,0.3) 0%, rgba(0,0,0,0) 70%);
-            box-shadow: 0 0 25px var(--glow-blue), inset 0 0 15px var(--glow-cyan);
-            transform: translateZ(-10px); /* Slightly recessed */
-        }
-
-        /* Projected Light Beam/Aura from the lens's center */
-        .light-beam {
-            position: absolute;
-            width: 100px;
-            height: 100px;
-            background: radial-gradient(circle at center, var(--glow-cyan) 0%, rgba(0,0,0,0) 70%);
-            border-radius: 50%;
-            filter: blur(20px); /* Soft ethereal glow */
-            transform: translateZ(-50px) scale(0.8); /* Further back, smaller, volumetric quality */
-            animation: pulseLight 3s infinite alternate ease-in-out;
-            opacity: 0.7;
-            z-index: -1; /* Ensure it's behind the lens rings */
-        }
-
-        /* Flowing Light Particles within the aura */
-        .light-particles {
-            position: absolute;
-            width: 5px; height: 5px;
-            border-radius: 50%;
-            background-color: var(--glow-blue);
-            box-shadow: 0 0 10px var(--glow-blue), 0 0 20px var(--glow-cyan);
-            opacity: 0; /* Starts invisible */
-            animation: particleFlow 4s infinite ease-out; /* Animates movement and fading */
-            z-index: -2; /* Ensure particles are deepest */
-        }
-        /* Staggered animation delays for multiple particles to create dynamic flow */
-        .light-particles:nth-child(1) { animation-delay: 0s; left: 20%; top: 30%; transform: scale(0.6); }
-        .light-particles:nth-child(2) { animation-delay: 1s; left: 70%; top: 60%; transform: scale(0.8); }
-        .light-particles:nth-child(3) { animation-delay: 2s; left: 40%; top: 80%; transform: scale(0.5); }
-        .light-particles:nth-child(4) { animation-delay: 3s; left: 80%; top: 10%; transform: scale(0.9); }
-        .light-particles:nth-child(5) { animation-delay: 0.5s; left: 10%; top: 70%; transform: scale(0.7); }
-
-
-        /* --- Text Integration: "DigitalConfVisions" --- */
-        .conf-text {
-            font-size: 2.5em;
-            font-weight: 700;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            color: var(--text-color); /* Fallback for browsers not supporting background-clip */
-            background: linear-gradient(45deg, var(--accent-silver) 0%, var(--glow-blue) 50%, var(--glow-cyan) 100%);
-            -webkit-background-clip: text; /* For WebKit browsers (Chrome, Safari) */
-            background-clip: text;
-            -webkit-text-fill-color: transparent; /* For WebKit browsers */
-            text-fill-color: transparent; /* Standard property */
-            text-shadow: 0 0 10px rgba(0,240,255,0.7), 0 0 20px rgba(0,240,255,0.4); /* Base text glow */
-            filter: drop-shadow(0 0 5px rgba(0,240,255,0.5)); /* Adds a slight halo effect */
-            animation: textGlow 2s infinite alternate ease-in-out; /* Pulsating text glow */
-            margin-top: 30px;
-            white-space: nowrap; /* Prevent text from wrapping */
-            text-align: center;
-        }
-
-        /* --- Hamburger Menu --- */
-        .hamburger {
-            position: fixed; /* Stays in place during scroll */
-            top: 30px;
-            right: 30px;
-            width: 100px; /* Base size for the hamburger container, provides "5x gain" visually */
-            height: 80px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around; /* Distribute bars evenly */
-            cursor: pointer;
-            z-index: 1000; /* Ensure it's above all other content */
-        }
-        .hamburger-bar {
-            width: 100%;
-            height: 10px; /* Significantly larger bar thickness for "5x gain" */
-            background-color: var(--hamburger-color);
-            border-radius: 5px;
-            transition: all 0.3s ease; /* Smooth transitions for potential future states (e.g., transform to 'X') */
-        }
-
-        /* Blink animation for hamburger */
-        @keyframes blink {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.2; }
-        }
-
-        .hamburger.blinking .hamburger-bar {
-            animation: blink 2s infinite alternate; /* Applies the blinking animation */
-        }
-
-        /* --- Keyframe Animations --- */
-
-        /* Continuous subtle rotation for the entire lens-gate component */
-        @keyframes rotateLens {
-            from { transform: rotateY(0deg); }
-            to { transform: rotateY(360deg); }
-        }
-
-        /* Pulsing effect for the light beam */
-        @keyframes pulseLight {
-            0% { transform: translateZ(-50px) scale(0.8); opacity: 0.7; }
-            50% { transform: translateZ(-55px) scale(1); opacity: 1; }
-            100% { transform: translateZ(-50px) scale(0.8); opacity: 0.7; }
-        }
-
-        /* Particle flow from behind the lens, moving outwards and fading */
-        @keyframes particleFlow {
-            0% { transform: translateZ(-10px) translateY(0px) scale(0); opacity: 0; }
-            20% { opacity: 1; transform: translateZ(-30px) translateY(-20px) scale(1); }
-            80% { opacity: 1; transform: translateZ(-70px) translateY(-80px) scale(0.5); }
-            100% { transform: translateZ(-90px) translateY(-100px) scale(0); opacity: 0; }
-        }
-
-        /* Pulsating glowing effect for the text */
-        @keyframes textGlow {
-            0% { text-shadow: 0 0 10px rgba(0,240,255,0.7), 0 0 20px rgba(0,240,255,0.4); }
-            50% { text-shadow: 0 0 15px rgba(0,240,255,1), 0 0 25px rgba(0,240,255,0.6); }
-            100% { text-shadow: 0 0 10px rgba(0,240,255,0.7), 0 0 20px rgba(0,240,255,0.4); }
-        }
-
-        /* --- Mobile Responsiveness --- */
-        @media (max-width: 768px) {
-            .lens-gate {
-                width: 250px;
-                height: 250px;
-                margin-bottom: 30px;
-            }
-            .lens-ring:nth-child(1) { width: 250px; height: 250px; }
-            .lens-ring:nth-child(2) { width: 210px; height: 210px; }
-            .lens-ring:nth-child(3) { width: 170px; height: 170px; }
-            .lens-ring:nth-child(4) { width: 130px; height: 130px; }
-
-            .light-beam {
-                width: 80px; height: 80px;
-            }
-
-            .conf-text {
-                font-size: 1.8em;
-                letter-spacing: 1px;
-            }
-
-            .hamburger {
-                top: 20px;
-                right: 20px;
-                width: 70px; /* Adjusted size for tablet */
-                height: 56px;
-            }
-            .hamburger-bar {
-                height: 7px; /* Adjusted bar thickness */
-            }
-        }
-
-        @media (max-width: 480px) {
-            .lens-gate {
-                width: 200px;
-                height: 200px;
-                margin-bottom: 20px;
-            }
-            .lens-ring:nth-child(1) { width: 200px; height: 200px; }
-            .lens-ring:nth-child(2) { width: 170px; height: 170px; }
-            .lens-ring:nth-child(3) { width: 140px; height: 140px; }
-            .lens-ring:nth-child(4) { width: 110px; height: 110px; }
-
-            .light-beam {
-                width: 60px; height: 60px;
-            }
-
-            .conf-text {
-                font-size: 1.5em;
-                letter-spacing: 0.5px;
-            }
-
-            .hamburger {
-                top: 15px;
-                right: 15px;
-                width: 50px; /* Adjusted size for mobile */
-                height: 40px;
-            }
-            .hamburger-bar {
-                height: 5px; /* Adjusted bar thickness */
-            }
-        }
-    </style>
-</head>
-<body>
-    <!-- Hamburger Menu Component -->
-    <div class="hamburger blinking" id="hamburger">
-        <span class="hamburger-bar"></span>
-        <span class="hamburger-bar"></span>
-        <span class="hamburger-bar"></span>
+    <!-- Profile section -->
+    <div class="flex flex-col items-center mb-8">
+        <img src="https://picsum.photos/180/180" alt="Pritam Jagtap Profile" class="rounded-full w-40 h-40 object-cover border-4 border-purple-600 shadow-xl mb-4 transform hover:scale-105 transition-transform duration-300">
+        <h1 class="text-5xl font-extrabold text-white tracking-tight mb-2 text-center leading-tight">Pritam Jagtap</h1>
+        <p class="text-xl text-purple-300 font-semibold mb-4 text-center">@prityaa379</p>
+        <p class="text-lg text-gray-300 max-w-xl text-center px-4">
+            Writer, Music Producer, Content Creator, Roaster, Youtuber, Rapper & Digital Entrepreneur.
+            Generating real digital money, one cosmic step at a time.
+        </p>
     </div>
 
-    <!-- Main Content: The Projecting Lens/Gate and "DigitalConfVisions" Text -->
-    <div class="container">
-        <div class="lens-gate">
-            <!-- Lens Rings: Multiple div elements create concentric circles for depth -->
-            <div class="lens-ring"></div>
-            <div class="lens-ring"></div>
-            <div class="lens-ring"></div>
-            <div class="lens-ring"></div>
-            <!-- Projected Light Beam/Aura emanating from the center -->
-            <div class="light-beam"></div>
-            <!-- Flowing Light Particles: Multiple small divs with staggered animations -->
-            <div class="light-particles"></div>
-            <div class="light-particles"></div>
-            <div class="light-particles"></div>
-            <div class="light-particles"></div>
-            <div class="light-particles"></div>
-        </div>
-        <div class="conf-text">DigitalConfVisions</div>
+    <!-- Links section -->
+    <div class="w-full max-w-md space-y-4">
+
+        <!-- My Writings & Portfolio -->
+        <a href="https://docs.google.com/document/d/1P3a50gunDDIfoOPk_ix5sNR9TbW-LzIt/edit?usp=drivesdk&ouid=110732801664783457291&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer"
+           class="block bg-purple-700 hover:bg-purple-600 text-white font-bold py-4 px-6 rounded-lg shadow-lg transition duration-300 ease-in-out transform hover:-translate-y-1 text-center text-lg focus:outline-none focus:ring-4 focus:ring-purple-500 focus:ring-opacity-50">
+            📖 My Writings & Portfolio
+        </a>
+
+        <!-- Experience Moon Land & Digital Money -->
+        <a href="#" class="block bg-gradient-to-r from-blue-600 to-indigo-700 hover:from-blue-500 hover:to-indigo-600 text-white font-bold py-4 px-6 rounded-lg shadow-lg transition duration-300 ease-in-out transform hover:-translate-y-1 text-center text-lg focus:outline-none focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50">
+            🚀 Experience Moon Land & Digital Money
+        </a>
+
+        <!-- Other key areas -->
+        <a href="#" class="block bg-gray-800 hover:bg-gray-700 text-gray-200 font-bold py-4 px-6 rounded-lg shadow-lg transition duration-300 ease-in-out transform hover:-translate-y-1 text-center text-lg focus:outline-none focus:ring-4 focus:ring-gray-600 focus:ring-opacity-50">
+            🎶 Music Production
+        </a>
+
+        <a href="#" class="block bg-gray-800 hover:bg-gray-700 text-gray-200 font-bold py-4 px-6 rounded-lg shadow-lg transition duration-300 ease-in-out transform hover:-translate-y-1 text-center text-lg focus:outline-none focus:ring-4 focus:ring-gray-600 focus:ring-opacity-50">
+            🎬 Content Creation & YouTube
+        </a>
+
+        <a href="#" class="block bg-gray-800 hover:bg-gray-700 text-gray-200 font-bold py-4 px-6 rounded-lg shadow-lg transition duration-300 ease-in-out transform hover:-translate-y-1 text-center text-lg focus:outline-none focus:ring-4 focus:ring-gray-600 focus:ring-opacity-50">
+            🎤 Roasting & Rapping
+        </a>
+
+        <a href="#" class="block bg-gray-800 hover:bg-gray-700 text-gray-200 font-bold py-4 px-6 rounded-lg shadow-lg transition duration-300 ease-in-out transform hover:-translate-y-1 text-center text-lg focus:outline-none focus:ring-4 focus:ring-gray-600 focus:ring-opacity-50">
+            💰 Digital Assets & Land Sales
+        </a>
+
     </div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const hamburger = document.getElementById('hamburger');
-            
-            // JavaScript to toggle the 'blinking' class on hamburger click.
-            // In a full application, this would also typically open/close a navigation menu.
-            hamburger.addEventListener('click', () => {
-                hamburger.classList.toggle('blinking');
-                console.log('Hamburger clicked! Blinking animation toggled.');
-                // Placeholder for actual menu toggle logic:
-                // const navMenu = document.getElementById('nav-menu');
-                // if (navMenu) navMenu.classList.toggle('is-active');
-            });
-        });
-    </script>
-</body>
-</html>
+    <!-- Social Media Icons -->
+    <div class="mt-8 flex space-x-6">
+        <a href="https://instagram.com/prityaa379" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition duration-300">
+            <!-- Instagram Icon (SVG) -->
+            <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12.315 2c2.43 0 2.71.01 3.66.05c.95.04 1.58.21 2.07.41c.5.21.91.54 1.31.95c.4.4.74.81.95 1.31c.2.49.37 1.12.41 2.07c.04.95.05 1.24.05 3.66c0 2.43-.01 2.71-.05 3.66c-.04.95-.21 1.58-.41 2.07c-.21.5-.54.91-.95 1.31c-.4.4-.81.74-1.31.95c-.49.2-.58.37-2.07.41c-.95.04-1.24.05-3.66.05c-2.43 0-2.71-.01-3.66-.05c-.95-.04-1.58-.21-2.07-.41c-.5-.21-.91-.54-1.31-.95c-.4-.4-.74-.81-.95-1.31c-.2-.49-.37-1.12-.41-2.07c-.04-.95-.05-1.24-.05-3.66c0-2.43.01-2.71.05-3.66c.04-.95.21-1.58.41-2.07c.21-.5.54-.91.95-1.31c.4-.4.81-.74 1.31-.95c.49-.2.58-.37 2.07-.41c.95-.04 1.24-.05 3.66-.05Zm0-2c-2.82 0-3.17.01-4.27.05c-1.1.04-1.84.21-2.35.42c-.51.21-.95.53-1.37.95c-.42.42-.73.86-.95 1.37c-.21.51-.38 1.25-.42 2.35c-.04 1.1-.05 1.45-.05 4.27s.01 3.17.05 4.27c.04 1.1.21 1.84.42 2.35c.21.51.53.95.95 1.37c.42.42.86.73 1.37.95c.51.21 1.25.38 2.35.42c1.1.04 1.45.05 4.27.05s3.17-.01 4.27-.05c1.1-.04 1.84-.21 2.35-.42c.51-.21.95-.53 1.37-.95c.42-.42.73-.86.95-1.37c.21-.51.38-1.25.42-2.35c.04-1.1.05-1.45.05-4.27s-.01-3.17-.05-4.27c-.04-1.1-.21-1.84-.42-2.35c-.21-.51-.53-.95-.95-1.37c-.42-.42-.86-.73-1.37-.95c-.51-.21-1.25-.38-2.35-.42c-1.1-.04-1.45-.05-4.27-.05Zm0 6.6a4.6 4.6 0 1 0 0 9.2a4.6 4.6 0 0 0 0-9.2Zm0 7.2a2.6 2.6 0 1 1 0-5.2a2.6 2.6 0 0 1 0 5.2Zm6.5-7.7A1.3 1.3 0 1 0 17 6.2a1.3 1.3 0 0 0-1.3 1.3Z" clip-rule="evenodd"></path></svg>
+        </a>
+        <a href="#" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition duration-300">
+             <!-- YouTube Icon (SVG) -->
+            <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M19.615 2.105a2.583 2.583 0 0 0-1.826-.745C17.05 1.29 12 1.29 12 1.29s-5.05 0-5.789.07c-.66.084-1.18.36-1.826.745A2.585 2.585 0 0 0 2.45 4.909C2 6.544 2 12 2 12s0 5.455.45 7.091c.18.675.58 1.22 1.155 1.636.575.416 1.26.65 1.826.745C6.95 22.71 12 22.71 12 22.71s5.05 0 5.789-.07c.66-.084 1.18-.36 1.826-.745.575-.416.975-.961 1.155-1.636.45-1.636.45-7.091.45-7.091s0-5.456-.45-7.091ZM10 16.5l6-4.5-6-4.5v9Z"></path></svg>
+        </a>
+        <!-- Add more social icons here, e.g., Spotify, Twitter, LinkedIn etc. -->
+    </div>
+
+    <!-- Footer -->
+    <div class="mt-12 text-gray-500 text-sm">
+        <p>&copy; 2023 Pritam Jagtap. All rights reserved.</p>
+    </div>
+
+</div>
